# game-of-life

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  app.cpp  config.cpp  config.h  ivlib.cpp  lifegameframe.cpp  lifegameframe.h  lifegamepanel.cpp  lifegamepanel.h  random.h  screensaver.cpp  universe.cpp  universe.h  vax.cpp  vec2d.h
src/app/: CMakeLists.txt  app.cpp  config.cpp  config.h  lifegamepanel.cpp  lifegamepanel.h
src/liblife/: CMakeLists.txt  bigbang.cpp  bigbang.h  cpuavxompuniverse.cpp  cpuavxuniverse.cpp  cpuavxuniverse.h  cpuippompuniverse.cpp  cpuipptbb.cpp  cpuippuniverse.cpp  cpuomploopuniverse.cpp  cpusinglethreadedloop.cpp  iuniverse.h  universe.cpp  universe.h  vec2d.h
